force-app/main/default/objects/Engagement__c/fields/Lead_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Lead_Consultant__c</fullName>
    <label>Lead Consultant</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Engagements (Lead Consultant)</relationshipLabel>
    <relationshipName>Engagements_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>